--- a/README.Rmd
+++ b/README.Rmd
@@ -41,7 +41,7 @@ library(leaflet)
 ## Cleaning NOAA Earthquake Data
 The eq_clean_data() function cleans the raw NOAA earthquake data. It reads the data from a tab-delimited file, creates a date column, and converts latitude and longitude to numeric class.
 ```{r}
-cleaned_data <- eq_clean_data("../inst/extdata/earthquakes.tsv")
+cleaned_data <- eq_clean_data("inst/extdata/earthquakes.tsv")
 cleaned_data %>%
   head()
 ```
@@ -92,21 +92,3 @@ ggplot(data = df_visualize) +
   )
 ```
 
-### Visualize Earthquakes in Mexico Since 2000
-This function filters the cleaned earthquake data to include only earthquakes in Mexico since the year 2000 and visualizes them on a leaflet map. Each earthquake is represented by a circle on the map, with the circle's radius proportional to the earthquake's magnitude. The pop-up for each circle displays the date of the earthquake.
-```{r, fig.dim = c(6, 4)}
-eq_clean_data("../inst/extdata/earthquakes.tsv") %>%
-  eq_location_clean() %>%
-  filter(country=="MEXICO" & lubridate::year(date) >= 2000) %>%
-  eq_map(annot_col = "date")
-```
-
-### Visualize Earthquakes in Mexico Since 2000 with Custom Annotations
-This function filters the cleaned earthquake data to include only earthquakes in Mexico since the year 2000. It then creates custom annotations for each earthquake, including information about the location, magnitude, and total deaths. These annotations are added to the leaflet map, providing more detailed information when a user interacts with the map.
-```{r, fig.dim = c(6, 4)}
-eq_clean_data("../inst/extdata/earthquakes.tsv") %>%
-  eq_location_clean() %>%
-  filter(country=="MEXICO" & lubridate::year(date) >= 2000) %>%
-  mutate(popup_text =  eq_create_label(.)) %>%
-  eq_map(annot_col = "popup_text")
-```
