--- a/README.Rmd
+++ b/README.Rmd
@@ -76,8 +76,23 @@ ggplot(data = df_visualize) +
 
 ```
 
+
 ### Timeline of Earthquakes
 The geom_timelinelabel() function includes label as well.
+```{r, fig.dim = c(6, 4)}
+ggplot(data = df_visualize) +
+  geom_timeline(aes(date,size = magnitude,  color = no_deaths))  +
+  geom_timelinelabel(aes(date,label = location), n_max = 5) +
+  theme_minimal() +
+  theme(
+    axis.line.x = element_line(linewidth = 0.75),
+    axis.title.y = element_blank(),
+    panel.grid.major.x = element_blank(),
+    panel.grid.minor.x = element_blank(),
+    legend.position = "bottom"
+  )
+```
+
 ```{r, fig.dim = c(6, 4)}
 ggplot(data = df_visualize) +
   geom_timeline(aes(date,country, size = magnitude,  color = no_deaths))  +
@@ -92,3 +107,17 @@ ggplot(data = df_visualize) +
   )
 ```
 
+### Visualize Earthquakes in Mexico Since 2000
+This function filters the cleaned earthquake data to include only earthquakes in Mexico since the year 2000 and visualizes them on a leaflet map. Each earthquake is represented by a circle on the map, with the circle's radius proportional to the earthquake's magnitude. The pop-up for each circle displays the date of the earthquake.
+eq_clean_data("../inst/extdata/earthquakes.tsv") %>%
+  eq_location_clean() %>%
+  filter(country=="MEXICO" & lubridate::year(date) >= 2000) %>%
+  eq_map(annot_col = "date")
+
+### Visualize Earthquakes in Mexico Since 2000 with Custom Annotations
+This function filters the cleaned earthquake data to include only earthquakes in Mexico since the year 2000. It then creates custom annotations for each earthquake, including information about the location, magnitude, and total deaths. These annotations are added to the leaflet map, providing more detailed information when a user interacts with the map.
+eq_clean_data("../inst/extdata/earthquakes.tsv") %>%
+  eq_location_clean() %>%
+  filter(country=="MEXICO" & lubridate::year(date) >= 2000) %>%
+  mutate(popup_text =  eq_create_label(.)) %>%
+  eq_map(annot_col = "popup_text")
