--- a/README.Rmd
+++ b/README.Rmd
@@ -118,7 +118,8 @@ eq_clean_data("../inst/extdata/earthquakes.tsv") %>%
 
 ### Visualize Earthquakes in Mexico Since 2000 with Custom Annotations
 This function filters the cleaned earthquake data to include only earthquakes in Mexico since the year 2000. It then creates custom annotations for each earthquake, including information about the location, magnitude, and total deaths. These annotations are added to the leaflet map, providing more detailed information when a user interacts with the map.
-```eq_clean_data("../inst/extdata/earthquakes.tsv") %>%
+```
+eq_clean_data("../inst/extdata/earthquakes.tsv") %>%
   eq_location_clean() %>%
   filter(country=="MEXICO" & lubridate::year(date) >= 2000) %>%
   mutate(popup_text =  eq_create_label(.)) %>%
