--- a/vignettes/NOAA_Earthquake_Package_Vignette.Rmd
+++ b/vignettes/NOAA_Earthquake_Package_Vignette.Rmd
@@ -31,6 +31,7 @@ Once installed, load the package into your R session:
 library(visualizeNOAA)
 library(tidyverse)
 library(leaflet)
+library(dplyr)
 ```
 
 
