--- a/vignettes/NOAA_Earthquake_Package_Vignette.Rmd
+++ b/vignettes/NOAA_Earthquake_Package_Vignette.Rmd
@@ -22,14 +22,14 @@ knitr::opts_chunk$set(
 
 You can install the package from GitHub using the following command:
 ```{r setup}
-#devtools::install_github("apd/visualizeNOAA")
+#devtools::install_github("apd540/visualizeNOAA")
 ```
 
 ## Loading the Package
 Once installed, load the package into your R session:
 ```{r}
 library(visualizeNOAA)
-library(tidyverse)
+library(ggplot2)
 library(leaflet)
 library(dplyr)
 ```
