Style code (GHA)

--- a/README.Rmd
+++ b/README.Rmd
@@ -27,7 +27,7 @@ This vignette provides an overview of the `visualizeNOAA` package functionalitie
 
 You can install the package from GitHub using the following command:
 ```{r setup}
-#devtools::install_github("apd/visualizeNOAA")
+# devtools::install_github("apd/visualizeNOAA")
 ```
 
 ## Loading the Package
@@ -51,7 +51,7 @@ cleaned_data %>%
 The eq_location_clean() function cleans the LOCATION_NAME column by stripping out the country name and converting names to title case.
 ```{r}
 cleaned_location <- eq_location_clean(cleaned_data)
-cleaned_location %>% 
+cleaned_location %>%
   head()
 ```
 
@@ -62,10 +62,11 @@ The geom_timeline() function plots a timeline of earthquakes.
 df_visualize <- bind_rows(
   cleaned_location %>%
     head(10),
-  data.frame(country="", location ="")) %>% 
-  mutate(country=factor(country, levels = unique(country))) 
+  data.frame(country = "", location = "")
+) %>%
+  mutate(country = factor(country, levels = unique(country)))
 ggplot(data = df_visualize) +
-  geom_timeline(aes(date,size = magnitude,  color = no_deaths)) +
+  geom_timeline(aes(date, size = magnitude, color = no_deaths)) +
   theme_minimal() +
   theme(
     axis.line.x = element_line(linewidth = 0.75),
@@ -74,7 +75,6 @@ ggplot(data = df_visualize) +
     panel.grid.minor.x = element_blank(),
     legend.position = "bottom"
   )
-
 ```
 
 
@@ -82,8 +82,8 @@ ggplot(data = df_visualize) +
 The geom_timelinelabel() function includes label as well.
 ```{r, fig.dim = c(6, 4)}
 ggplot(data = df_visualize) +
-  geom_timeline(aes(date,size = magnitude,  color = no_deaths))  +
-  geom_timelinelabel(aes(date,label = location), n_max = 5) +
+  geom_timeline(aes(date, size = magnitude, color = no_deaths)) +
+  geom_timelinelabel(aes(date, label = location), n_max = 5) +
   theme_minimal() +
   theme(
     axis.line.x = element_line(linewidth = 0.75),
@@ -96,8 +96,8 @@ ggplot(data = df_visualize) +
 
 ```{r, fig.dim = c(6, 4)}
 ggplot(data = df_visualize) +
-  geom_timeline(aes(date,country, size = magnitude,  color = no_deaths))  +
-  geom_timelinelabel(aes(date,country,label = location), n_max = 5) +
+  geom_timeline(aes(date, country, size = magnitude, color = no_deaths)) +
+  geom_timelinelabel(aes(date, country, label = location), n_max = 5) +
   theme_minimal() +
   theme(
     axis.line.x = element_line(linewidth = 0.75),
